engine/udf/src/snapshots/udf__eval__tests__match_functions.snap
---
source: udf/src/eval.rs
expression: results
---
[
    Some(
        MatchedFunction {
            constants: {
                "DEFAULT_INPUT_COST": Constant(
                    Number(0.001),
                ),
                "DEFAULT_OUTPUT_COST": Constant(
                    Number(0.002),
                ),
                "INPUT_TOKEN_COST": Constant(
                    Number(0.00001),
                ),
                "OUTPUT_TOKEN_COST": Constant(
                    Number(0.00003),
                ),
            },
            returns: {
                "total_cost": OutputExpression(
                    "response.body.usage.total_tokens | int * 0.00005 * (1.1 if client.options.stream else 1.0)\n",
                ),
                "completion_cost": OutputExpression(
                    "response.body.usage.completion_tokens | int * OUTPUT_TOKEN_COST\n",
                ),
            },
        },
    ),
    Some(
        MatchedFunction {
            constants: {
                "DEFAULT_INPUT_COST": Constant(
                    Number(0.001),
                ),
                "DEFAULT_OUTPUT_COST": Constant(
                    Number(0.002),
                ),
                "INPUT_TOKEN_COST": Constant(
                    Number(0.00002),
                ),
                "OUTPUT_TOKEN_COST": Constant(
                    Number(0.00006),
                ),
            },
            returns: {
                "total_cost": OutputExpression(
                    "(response.body.usageMetadata.promptTokenCount - response.body.usageMetadata.cachedTokenCount) * INPUT_TOKEN_COST + response.body.usageMetadata.candidatesTokenCount * OUTPUT_TOKEN_COST\n",
                ),
            },
        },
    ),
    Some(
        MatchedFunction {
            constants: {
                "DEFAULT_INPUT_COST": Constant(
                    Number(0.001),
                ),
                "DEFAULT_OUTPUT_COST": Constant(
                    Number(0.002),
                ),
                "INPUT_TOKEN_COST": Constant(
                    Number(0.00002),
                ),
                "OUTPUT_TOKEN_COST": Constant(
                    Number(0.00006),
                ),
            },
            returns: {
                "total_cost": OutputExpression(
                    "(response.body.usage.input_tokens - response.body.usage.cached_tokens) * INPUT_TOKEN_COST + response.body.usage.output_tokens * OUTPUT_TOKEN_COST\n",
                ),
            },
        },
    ),
    None,
]
